[project]
name = "buku"
version = "0.1.0"
description = ""
authors = [
    {name = "sysid", email = "sysid@gmx.de"},
]
dependencies = [
    "beautifulsoup4>=4.4.1",
    "certifi",
    "cryptography>=1.2.3",
    "html5lib>=1.0.1",
    "setuptools",
    "urllib3<2,>=1.23",
    "pyreadline3; sys_platform == \"win32\"",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "attrs>=17.4.0",
    "beautifulsoup4>=4.6.0",
    "Click>=7.0",
    "flake8>=3.4.1",
    "hypothesis>=6.0.0",
    "mypy-extensions==0.4.1",
    "py>=1.5.0",
    "pylint>=1.7.2",
    "pytest-cov>=4.1.0",
    "pytest-recording>=0.12.1",
    "pytest>=6.2.1",
    "PyYAML>=4.2b1",
    "setuptools>=41.0.1",
    "vcrpy>=1.13.0",
]
